@@ -1,5 +1,5 @@
-#define USE_PANGO
 #define USE_GMODULE
+#define USE_PLUGIN
 #define PACKAGE "xchat"
 #define VERSION "1.9.7"
 #define XCHATLIBDIR "."
