@@ -8,9 +8,10 @@
 
  - Fixed serverlist entry box text corruption.
  - Fixed the non-mmx tinted-tranparency code crashing.
+ - Fixed interpretation of mIRC color 99.
+ - Use Pango renderer by default, for better i18n.
  - 
  - 
- -  
 
 
 ----------------------------------------------------------------------
